# sqlalchemy-wrapper

./: LICENSE  README.md  pyproject.toml
.github/workflows/: qc.yml
src/sqlalchemy_wrapper/: __init__.py  base.py  wrapper.py
