[project]
name = "sqlalchemy-wrapper"
description = "A utility wrapper around SQLAlchemy"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.7"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "SQLAlchemy~=2.0.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
